--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 # Enter the full path to directory where all computation results are stored
 COMP_DIR=/path/to/working/directory/
+DATA_DIR=/path/to/data/directory/
